test_log.txt
> Task :compileJava UP-TO-DATE
> Task :processResources
> Task :classes

> Task :compileTestJava FAILED
C:\Users\SSAFY\Desktop\bokducke\src\test\java\ssafy\bokduck\service\InferenceTest.java:35: error: incompatible types: String cannot be converted to Authentication
        String token = jwtTokenProvider.createToken("testuser");
                                                    ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error

[Incubating] Problems report is available at: file:///C:/Users/SSAFY/Desktop/bokducke/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\SSAFY\Desktop\bokducke\src\test\java\ssafy\bokduck\service\InferenceTest.java:35: error: incompatible types: String cannot be converted to Authentication
          String token = jwtTokenProvider.createToken("testuser");
                                                      ^
  Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.2.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
3 actionable tasks: 2 executed, 1 up-to-date
